Update git ignore to not include serveit.pid

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-
+.pid
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
