--- a/serveit-dashboard/package.json
+++ b/serveit-dashboard/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.32.6",
+    "markdown-to-jsx": "^7.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
